--- a/.env.production
+++ b/.env.production
@@ -16,9 +16,9 @@ VITE_BUILD_COMPRESS = 'gzip'
 VITE_BUILD_COMPRESS_DELETE_ORIGIN_FILE = false
 
 #后台接口父地址(必填)
-VITE_GLOB_API_URL=http://110.40.157.36/api
+VITE_GLOB_API_URL=/api
 #后台接口全路径地址(必填)
-VITE_GLOB_DOMAIN_URL=http://110.40.157.36
+VITE_GLOB_DOMAIN_URL=
 # 接口父路径前缀
 VITE_GLOB_API_URL_PREFIX=
 
