--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@logicflow/core": "^1.2.12",
     "@logicflow/extension": "^1.2.13",
     "@qiaoqiaoyun/drag-free": "^1.1.4",
+    "@traptitech/markdown-it-katex": "^3.6.0",
     "@vue/runtime-core": "^3.3.4",
     "@vue/shared": "^3.3.4",
     "@vueuse/core": "^10.4.1",
@@ -48,9 +49,11 @@
     "echarts": "^5.4.3",
     "emoji-mart-vue-fast": "^15.0.0",
     "enquire.js": "^2.1.6",
+    "highlight.js": "^11.7.0",
     "intro.js": "^7.2.0",
     "lodash-es": "^4.17.21",
     "lodash.get": "^4.4.2",
+    "markdown-it": "^14.0.0",
     "md5": "^2.3.0",
     "mockjs": "^1.1.0",
     "monaco-editor": "^0.41.0",
@@ -94,6 +97,7 @@
     "@types/intro.js": "^5.1.1",
     "@types/jest": "^29.5.4",
     "@types/lodash-es": "^4.17.8",
+    "@types/markdown-it-link-attributes": "^3.0.4",
     "@types/mockjs": "^1.0.7",
     "@types/node": "^20.5.6",
     "@types/nprogress": "^0.2.0",
@@ -130,6 +134,7 @@
     "jest": "^29.6.4",
     "less": "^4.2.0",
     "lint-staged": "14.0.1",
+    "markdown-it-link-attributes": "^4.0.1",
     "npm-run-all": "^4.1.5",
     "picocolors": "^1.0.0",
     "postcss": "^8.4.28",
