--- a/.env.development
+++ b/.env.development
@@ -6,6 +6,7 @@ VITE_PUBLIC_PATH = /
 
 # 跨域代理，您可以配置多个 ,请注意，没有换行符
 VITE_PROXY = [["/api","http://127.0.0.1/api"],["/upload","http://127.0.0.1/api"]]
+# VITE_PROXY = [["/api","http://110.40.157.36/api"],["/upload","http://110.40.157.36/api"]]
 # 控制台不输出
 VITE_DROP_CONSOLE = false
 
