--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "vxe-table": "4.5.17",
     "vxe-table-plugin-antd": "3.1.0",
     "xe-utils": "3.5.14",
+    "xlsx": "^0.18.5",
     "xss": "^1.0.14"
   },
   "devDependencies": {
