--- a/.env.development
+++ b/.env.development
@@ -6,10 +6,10 @@ VITE_PUBLIC_PATH = /
 
 
 # 跨域代理，您可以配置多个 ,请注意，没有换行符
-VITE_PROXY = [["/api","http://127.0.0.1:8001/api"],["/upload","http://127.0.0.1/api"]]
-
+VITE_PROXY = [["/api","http://127.0.0.1:8001/api"],["/upload","/api"]]
+# VITE_PROXY = [["/api","http://110.40.157.36/api"],["/upload","/api"]]
 #后台接口全路径地址(必填)
-VITE_GLOB_DOMAIN_URL=http://localhost:8080/jeecg-boot
+VITE_GLOB_DOMAIN_URL=/
 
 #后台接口父地址(必填)
 VITE_GLOB_API_URL=/api
